--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
   var connection = new WebSocket("ws://localhost:3000/ws");
   connection.onmessage = function(e) {
     var json = JSON.parse(e.data);
-    console.log("Message: " + json.Message);
+    console.log(json)
+  }
+  connection.onclose = function() {
+    console.log("Disconnected.")
   }
 </script>
