--- a/public/bob.html
+++ b/public/bob.html
@@ -1,7 +1,7 @@
 <h1>Demo</h1>
 
 <script>
-  var connection = new WebSocket("ws://localhost:3000/ws?name=jon");
+  var connection = new WebSocket("ws://localhost:3000/ws?name=bob");
   connection.onmessage = function(e) {
     var json = JSON.parse(e.data);
     console.log(json)
